# openarm_isaac

./: .gitignore  .gitmodules  README.md
OPEN_ARM_UI/: extension.toml
OPEN_ARM_UI/OPEN_ARM_UI/: extension.py
isaacsim.openarm_UI/: extension.toml
isaacsim.openarm_UI/openarm_UI/: extension.py
isaacsim.openarm_UI/openarm_UI/assets/: openarm_bimanual.urdf  openarm_left.yaml  openarm_left_cuMotion.xrdf  openarm_right.yaml  openarm_right_cuMotion.xrdf
isaacsim.openarm_UI/openarm_UI/assets/h5/: episode_0.h5  episode_1.h5  episode_2.h5
isaacsim.openarm_UI/openarm_UI/assets/usd/: openarm.usd  openarm_RL.usd  openarm_sim.usd
openarm_converters/openarm_converters/: bimanual_joint_state_converter.py
src/openarm_converters/: package.xml  setup.cfg  setup.py
src/openarm_converters/openarm_converters/: bimanual_joint_state_converter.py  physical_leader_relay.py  real_to_sim_converter.py  sim_to_real_converter.py
